feat(event): subscriber items 2016-03

--- a/website/views/shared/new-stuff.jade
+++ b/website/views/shared/new-stuff.jade
@@ -1,54 +1,80 @@
-h2 3/18/2016 - SPRING FLING BEGINS! LIMITED EDITION EQUIPMENT, SEASONAL SHOP OPENS, AND SPRING MYSTERY PLOT CONTINUES
+h2 3/24/2016 - MARCH SUBSCRIBER ITEMS, ANDROID UPDATE, EQUIPMENT SORTING, AND SPRING PLOT-LINE CONTINUES!
   hr
   tr
     td
-      .promo_spring_classes_2016.pull-right
-      h3 Limited Edition Class Outfits 
-      p From now until April 30th, limited edition outfits are available in the Rewards column! Depending on your class, you can be a Springing Bunny, Clever Dog, Grand Malkin, or Brave Mouse. You'd better get productive to earn enough Gold before your time runs out...
-      p.small.muted by PainterProphet and Balduranne
+      .promo_mystery_201603.pull-right
+      h3 March Subscriber Items
+      p The March Subscriber Items have been revealed: the Lucky Clover Item Set! All March subscribers will receive the Lucky Hat and the Lucky Suit. You still have five days to <a href='/#/options/settings/subscription'>subscribe</a> and receive the item set! Thank you so much for your support - we really do rely on you to keep Habitica free to use and running smoothly.
+      p.small.muted by Lemoness
   tr
     td
-      .promo_egg_mounts.pull-right
-      h3 Seasonal Shop Opens
-      p The <a href='/#/options/inventory/seasonalshop'>Seasonal Shop</a> has opened! It's stocking springtime Seasonal Edition goodies at the moment, including past spring outfits and the Egg Quest scroll. Everything there will be available to purchase during the Spring Fling event each year, but it's only open until April 30th, so be sure to stock up now, or you'll have to wait a year to buy these items again!
+      h3 Android Update
+      p In case you missed it, this weekend we released a follow-up update to the <a href='https://play.google.com/store/apps/details?id=com.habitrpg.android.habitica' target='_blank'>Android app</a> with plenty of bug fixes. Be sure to download it now if you haven't already!
+      p.small.muted by Viirus
   tr
     td
-      h3 Spring Plot Continues: The Floating City of Mistiflying
-      p As the Spring Fling celebrations begin, a sparkling cloud descends from the sky to reveal… the floating city of Mistiflying!
-      br
-      p Mistiflying is a flower-filled city that drifts in the clouds above Habitica, manufacturing custom rewards and raining them down on deserving Habiticans. It’s brimming with friendly, magical bees that work hard to keep the blossoms healthy and the city floating, and there’s a festive humming in the air. Looks like we’ll get a chance for plenty of parties this month! We’ve even received a visit from Mistiflying’s somewhat erratic ruler: the April Fool, a masterful rogue with a penchant for fun and an interest in illusions.
+      h3 Equipment Sorting
+      p Now you can sort your <a href='/#/options/inventory/equipment'>equipment</a> by set or by stat, so that you can choose the best pieces to wear.
+      p.small.muted by qrry and Blade
   tr
     td
-      .npc_aprilFool.pull-right
-      h3 Spring Plot-Line Continues: The April Fool
-      p The April Fool swishes his cape over his shoulders, striding through the mists into Habit City. “Lemoness! Redphoenix! SabreCat! My dearest and most delightful friends!” He sweeps out his arms in a striking pose, and several firework displays go off behind him. “Oho, look at your faces! It’s like you aren’t even happy to see me.”
+      h3 Spring Plot-Line Continues
+      p Since the April Fool came to town, there have been non-stop parties, pranks, and parades! The only problem is, with the constant celebrations, it’s getting a teensy bit difficult to, well… accomplish any work whatsoever.
       br
-      p Lemoness does, in fact, seem less than thrilled. “It’s just… the last time you were here, I was kidnapped by a mutant flower uprising."
+      p Some concerned citizens broach the issue with the April Fool, but he just chortles and raises his voice to be heard over the trombones. “Oho! Nothing to fear. I’ve discovered a trick that will keep us reaping our just rewards, even as we continue to celebrate! Just you wait and see. I’m saving it as my grand finale!”
       br
-      p “Really! Did I cause that?”
-      br
-      p Redphoenix smolders. “Two years ago, you turned me into an eggplant.”
-      br
-      p “An honest misunderstanding, I am sure. But it did only last a single day!”
-      The April Fool links his arm with SabreCat and gives the tracker a winning smile. “Which reminds me – Sabe, I can crash in your guest cottage again this month, right? No hard feelings about the Mammoth Ballet incident?”
-      br
-      p SabreCat lets out a strangled growl, and Lemoness hastily pulls the April Fool out of claw range.
-      br
-      p “You’re here for a whole month?” Redphoenix says. "What, did Lady Glaciate banish you from the Stoïkalm Steppes again?"
-      br
-      p The April Fool seems affronted at the suggestion. "Rumors, hearsay, and probably lies! Still, Habit City may temporarily be a more hospitable place to hover over. For entirely unrelated reasons, you understand."
-      br
-      p Lemoness rubs her temples.“Even so. It's not that we don’t... appreciate your yearly creativity, but we’re in the middle of the Spring Fling festivities. It’s a very busy time!!”
-      br
-      p He taps her affectionately on the nose. “Nothing to fear, my citrusy dear! Believe me, you won’t even notice I’m here.”
-      br
-      p Then he claps his hands, and a marching band starts up.
+      p Well, it probably won’t hurt to keep celebrating until April First. It’s only one day, after all...
+      p.small.muted by Lemoness
 
 if menuItem !== 'oldNews'
   hr
   a(href='/static/old-news', target='_blank') Read older news
 
 mixin oldNews
+  h2 3/18/2016 - SPRING FLING BEGINS! LIMITED EDITION EQUIPMENT, SEASONAL SHOP OPENS, AND SPRING MYSTERY PLOT CONTINUES
+    tr
+      td
+        .promo_spring_classes_2016.pull-right
+        h3 Limited Edition Class Outfits 
+        p From now until April 30th, limited edition outfits are available in the Rewards column! Depending on your class, you can be a Springing Bunny, Clever Dog, Grand Malkin, or Brave Mouse. You'd better get productive to earn enough Gold before your time runs out...
+        p.small.muted by PainterProphet and Balduranne
+    tr
+      td
+        .promo_egg_mounts.pull-right
+        h3 Seasonal Shop Opens
+        p The <a href='/#/options/inventory/seasonalshop'>Seasonal Shop</a> has opened! It's stocking springtime Seasonal Edition goodies at the moment, including past spring outfits and the Egg Quest scroll. Everything there will be available to purchase during the Spring Fling event each year, but it's only open until April 30th, so be sure to stock up now, or you'll have to wait a year to buy these items again!
+    tr
+      td
+        h3 Spring Plot Continues: The Floating City of Mistiflying
+        p As the Spring Fling celebrations begin, a sparkling cloud descends from the sky to reveal… the floating city of Mistiflying!
+        br
+        p Mistiflying is a flower-filled city that drifts in the clouds above Habitica, manufacturing custom rewards and raining them down on deserving Habiticans. It’s brimming with friendly, magical bees that work hard to keep the blossoms healthy and the city floating, and there’s a festive humming in the air. Looks like we’ll get a chance for plenty of parties this month! We’ve even received a visit from Mistiflying’s somewhat erratic ruler: the April Fool, a masterful rogue with a penchant for fun and an interest in illusions.
+    tr
+      td
+        .npc_aprilFool.pull-right
+        h3 Spring Plot-Line Continues: The April Fool
+        p The April Fool swishes his cape over his shoulders, striding through the mists into Habit City. “Lemoness! Redphoenix! SabreCat! My dearest and most delightful friends!” He sweeps out his arms in a striking pose, and several firework displays go off behind him. “Oho, look at your faces! It’s like you aren’t even happy to see me.”
+        br
+        p Lemoness does, in fact, seem less than thrilled. “It’s just… the last time you were here, I was kidnapped by a mutant flower uprising."
+        br
+        p “Really! Did I cause that?”
+        br
+        p Redphoenix smolders. “Two years ago, you turned me into an eggplant.”
+        br
+        p “An honest misunderstanding, I am sure. But it did only last a single day!”
+        The April Fool links his arm with SabreCat and gives the tracker a winning smile. “Which reminds me – Sabe, I can crash in your guest cottage again this month, right? No hard feelings about the Mammoth Ballet incident?”
+        br
+        p SabreCat lets out a strangled growl, and Lemoness hastily pulls the April Fool out of claw range.
+        br
+        p “You’re here for a whole month?” Redphoenix says. "What, did Lady Glaciate banish you from the Stoïkalm Steppes again?"
+        br
+        p The April Fool seems affronted at the suggestion. "Rumors, hearsay, and probably lies! Still, Habit City may temporarily be a more hospitable place to hover over. For entirely unrelated reasons, you understand."
+        br
+        p Lemoness rubs her temples.“Even so. It's not that we don’t... appreciate your yearly creativity, but we’re in the middle of the Spring Fling festivities. It’s a very busy time!!”
+        br
+        p He taps her affectionately on the nose. “Nothing to fear, my citrusy dear! Believe me, you won’t even notice I’m here.”
+        br
+        p Then he claps his hands, and a marching band starts up.
   h2 3/17/2016 - MAJOR iOS AND ANDROID APP UPDATES!
     tr
       td
